<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">
        <androidx.cardview.widget.CardView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/default_padding"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_field"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/default_padding"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/default_padding"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/standardLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/default_padding"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_layout"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_height"
            android:layout_marginTop="@dimen/default_padding"
            app:cardBackgroundColor="@color/colorPrimary"
            android:padding="@dimen/default_padding"
            app:cardCornerRadius="@dimen/card_corner_radius">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:textColor="@color/white"
                android:layout_gravity="center" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>